--- a/djangoproject/templates/base.html
+++ b/djangoproject/templates/base.html
@@ -11,8 +11,8 @@
             --primary: #4361ee;
             --primary-dark: #3a56d4;
             --secondary: #7209b7;
-            --success: #4cc9f0;
-            --danger: #f72585;
+            --success: #16ce4d;
+            --danger: #d40505;
             --warning: #f8961e;
             --info: #4895ef;
             --light: #f8f9fa;
